<resources>
    <string name="app_name">MaterialDesign</string>
    <string name="max_lenght">15</string>
    <string name="fragment_main_width">0dp</string>
    <string name="helper_text_text_input_layout">input query</string>

    <string name="photo_of_the_day">Photo of the day</string>
    <string name="search_wiki">Search in Wiki</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>
    <string name="text_generator">Товарищи! постоянное информационно-пропагандистское обеспечение нашей деятельности позволяет выполнять важные задания по разработке модели развития. Повседневная практика показывает, что реализация намеченных плановых заданий в значительной степени обуславливает создание модели развития. Разнообразный и богатый опыт консультация с широким активом обеспечивает широкому кругу. Идейные соображения высшего порядка, а также начало повседневной работы по формированию позиции позволяет оценить значение модели развития. Если у вас есть какие то интересные предложения, обращайтесь! Студия Web-Boss всегда готова решить любую задачу. Идейные соображения высшего порядка, а также дальнейшее развитие различных форм деятельности позволяет оценить значение новых предложений. Идейные соображения высшего порядка, а также дальнейшее развитие различных форм деятельности позволяет оценить значение новых предложений. Равным образом консультация с широким активом требуют определения и уточнения модели развития. Таким образом новая модель организационной деятельности способствует подготовки и реализации систем массового участия. С другой стороны рамки и место обучения кадров способствует подготовки и реализации модели развития. Товарищи! консультация с широким активом позволяет выполнять важные задания по разработке систем массового участия. Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании новых предложений. Товарищи! консультация с широким активом позволяет выполнять важные задания по разработке систем массового участия. Равным образом рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям. Товарищи! сложившаяся структура организации представляет собой интересный эксперимент проверки направлений прогрессивного развития. Повседневная практика показывает, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании дальнейших направлений развития. Повседневная практика показывает, что реализация намеченных плановых заданий в значительной степени обуславливает создание модели развития. Повседневная практика показывает, что реализация намеченных плановых заданий в значительной степени обуславливает создание модели развития. Значимость этих проблем настолько очевидна, что консультация с широким активом играет важную роль в формировании новых предложений. Идейные соображения высшего порядка, а также укрепление и развитие структуры играет важную роль в формировании существенных финансовых и административных условий. Равным образом рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям. Товарищи! сложившаяся структура организации представляет собой интересный эксперимент проверки направлений прогрессивного развития. Товарищи! консультация с широким активом позволяет выполнять важные задания по разработке систем массового участия. Идейные соображения высшего порядка, а также дальнейшее развитие различных форм деятельности позволяет оценить значение новых предложений. Равным образом рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям. Разнообразный и богатый опыт консультация с широким активом обеспечивает широкому кругу. Значимость этих проблем настолько очевидна, что консультация с широким активом играет важную роль в формировании новых предложений. Товарищи! постоянное информационно-пропагандистское обеспечение нашей деятельности позволяет выполнять важные задания по разработке модели развития. Не следует, однако забывать, что дальнейшее развитие различных форм деятельности способствует подготовки и реализации форм развития. Равным образом консультация с широким активом требуют определения и уточнения модели развития. Идейные соображения высшего порядка, а также укрепление и развитие структуры играет важную роль в формировании существенных финансовых и административных условий. Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм деятельности обеспечивает широкому кругу (специалистов) участие в формировании новых предложений. Товарищи! консультация с широким активом позволяет выполнять важные задания по разработке систем массового участия. Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм деятельности обеспечивает широкому кругу (специалистов) участие в формировании новых предложений. Разнообразный и богатый опыт консультация с широким активом обеспечивает широкому кругу. Таким образом реализация намеченных плановых заданий позволяет оценить значение новых предложений. Идейные соображения высшего порядка, а также укрепление и развитие структуры играет важную роль в формировании существенных финансовых и административных условий. Разнообразный и богатый опыт консультация с широким активом обеспечивает широкому кругу. Товарищи! консультация с широким активом позволяет выполнять важные задания по разработке систем массового участия. . Товарищи! консультация с широким активом позволяет выполнять важные задания по разработке систем массового участия. Значимость этих проблем настолько очевидна, что консультация с широким активом играет важную роль в формировании новых предложений.</string>
    <string name="title_text_generator">Text generator</string>
    <string name="loading_text">Loading...</string>
    <string name="favorite">favorite</string>
    <string name="return_menu">return</string>

    <string name="pause_left">M26,23 V41</string>
    <string name="pause_right">M37,23 L37,32 L37,41</string>
    <string name="pause_right_play">M26,23 L41,32 L27,41</string>
    <string name="clockwise_circle">M32,8 A24,24 0 1 1 31.99,8 z</string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="twodaysago">two days ago</string>
    <string name="day">day</string>
    <string name="night">night</string>
    <string name="theme_select">select Day/Night or other theme</string>
    <string name="theme_default">Default</string>
    <string name="theme_one">Orange</string>
    <string name="two">Green</string>
    <string name="nasa_picture_of_day">select day</string>
    <string name="chips_type">type chips:</string>
    <string name="picture_description_show">picture description show</string>
    <string name="attr_text">test ?attr color</string>
    <string name="text_earht">Earht</string>
    <string name="text_mars">Mars</string>
    <string name="text_header">Заголовок</string>
    <string name="text_system">System</string>
    <string name="earth_description_menu">Описание пункта Земля</string>
    <string name="mars_description_menu">Описание пункта Марс</string>
    <string name="system_description_menu">Описание пункта Солнечная система</string>
    <string name="constraint">constraint</string>
    <string name="coordinator">coordinator</string>
    <string name="motion">motion</string>
    <string name="text_actv_activity_animation">Test transitions</string>
    <string name="text_recycler_item">TAP ME</string>
    <string name="text_ACB">Animate</string>
    <string name="title_navigation_one">На экран NavigationActivity</string>
    <string name="title_navigation_two">На экран BottomNavigationActivity</string>
    <string name="title_navigation_three">На экран LayoutActivity</string>
    <string name="title_navigation_four">На экран AnimationsActivity</string>
    <string name="title_navigation_five">На экран RecyclerActivity</string>
    <string name="title_navigation_six">На экран Scale Animations</string>
    <string name="text_ACB_path">click me</string>
    <string name="title_navigation_seven">На экран Animations Resort</string>
    <string name="title_navigation_eight">На экран FAB Animations</string>
    <string name="title_navigation_nine">На экран Toolbar Elevation</string>
    <string name="animation_toolbar_elevation">Toolbar Elevation animation</string>
    <string name="yandex_day_photo">Коты на прогулке</string>
    <string name="title_navigation_ten">На экран Cat Shop))</string>
    <string name="bonus_description">На этом, случайно запечатлённом кадре, мама Кошка и её котенок на прогулке в солнечный летний денёк.</string>
    <string name="show_description_bonus">Показать описание</string>
    <string name="cats_photo_date">11 июня 2022</string>
    <string name="recycler">recycler</string>
    <string name="recycler_earth_description">Описание планеты Земля</string>
    <string name="recycler_mars_description">Описание планеты Марс</string>
    <string name="fragment_ux">fragment ux</string>
    <string name="fragment_ux_text">text</string>
    <string name="fragment_ux_button">button</string>
    <string name="good">Правильно:</string>
    <string name="notgood">Неправильно</string>
    <string name="fragment_ux_tutorial">tutorial</string>


</resources>